refactor(account): redesign DTOs and mappers into layered mapping architecture
Introduced layered Account DTO structure:

- AccountBaseResponse for shared fields

- AccountNormalResponse for client-facing simplified view (role names)

- AccountAdminResponse for admin-level detailed view (audit + role metadata)

Refactored MapStruct mappers into composable layers:

- AccountBaseMapper as reusable base mapping

- AccountNormalMapper for user-facing projections

- AccountAdminMapper for admin projections with detailed role mapping

Implemented dedicated AccountRoleMapper for mapping join entity (AccountRole → AccountRoleResponse)

Standardized role mapping strategy:

- Added RoleMapper with reusable @Named methods for List<Role> → List<String>

Improved separation of concerns:

- Decoupled persistence model (AccountRole) from API responses

- Eliminated direct mapping leakage of join entities in normal flows

Unified mapper configuration using GlobalMapperConfig

Enhanced update flow:

- Ignored sensitive fields (password, roles) in update mappings

- Delegated profile updates through ProfileMapper