@@ -12,7 +12,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.security.Principal;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -50,10 +49,9 @@ public class Account extends AuditableEntity implements UserDetails,Principal {
 
     // -------------------------------------- Relationships ----------------------------------- //
 
-    @ManyToOne(optional = false, fetch = FetchType.LAZY)
+    @OneToOne(cascade = CascadeType.ALL, optional = false)
     @JoinColumn(name = "profile_id", nullable = false)
     private Profile profile;
-
 
     @Builder.Default
     @OneToMany(
@@ -65,18 +63,22 @@ public class Account extends AuditableEntity implements UserDetails,Principal {
     private List<AccountRole> accountRoles = new ArrayList<>();
     // ------------------------------------ End Relationships -------------------------------- //
 
-    @PrePersist
-    public void applyDefaults() {
-        if (accountStatus == null) {
-            accountStatus = AccountStatus.DISABLED;
-        }
-    }
+
+
+    // ------------------------------------ Business Methods -------------------------------- //
 
     public void attachProfile(Profile profile) {
         this.profile = profile;
     }
 
     public void assignRole(Role role) {
+
+        boolean alreadyAssigned = hasRole(role.getId());
+
+        if (alreadyAssigned) {
+            return;
+        }
+
         AccountRole accountRole = AccountRole.builder()
                 .account(this)
                 .role(role)
@@ -85,17 +87,71 @@ public class Account extends AuditableEntity implements UserDetails,Principal {
         accountRoles.add(accountRole);
     }
 
+    public void assignRole(List<Role> roles) {
+        if (roles == null || roles.isEmpty()) {
+            return;
+        }
+
+        roles.forEach(this::assignRole);
+    }
+
+    public void removeRole(Role role) {
+        if (role == null || role.getId() == null) {
+            return;
+        }
+
+        accountRoles.removeIf(ar -> ar.getRole().getId().equals(role.getId()));
+    }
+
     public List<Role> getRoles() {
         return accountRoles.stream()
                 .map(AccountRole::getRole)
-                .collect(Collectors.toList());
+                .toList();
     }
-
 
     public boolean hasRole(String roleName) {
-        return getRoles().stream()
+        if (roleName == null) {
+            return false;
+        }
+
+        return accountRoles.stream()
+                .map(AccountRole::getRole)
                 .anyMatch(r -> r.getName().equals(roleName));
     }
+
+    public boolean hasRole(Long roleId) {
+        if (roleId == null) {
+            return false;
+        }
+
+        return accountRoles.stream()
+                .map(AccountRole::getRole)
+                .anyMatch(r -> r.getId().equals(roleId));
+    }
+
+    public void clearRoles() {
+        accountRoles.clear();
+    }
+
+    public void activate() { setAccountStatus(AccountStatus.ACTIVE); }
+    public void lock()     { setAccountStatus(AccountStatus.LOCKED); }
+    public void suspend()  { setAccountStatus(AccountStatus.SUSPENDED); }
+    public void disable()  { setAccountStatus(AccountStatus.DISABLED); }
+
+    public boolean isActive()    { return accountStatus.isActive(); }
+    public boolean isLocked()    { return accountStatus.isLocked(); }
+    public boolean isSuspended() { return accountStatus.isSuspended(); }
+    public boolean isDisabled()  { return accountStatus.isDisabled(); }
+
+    // ------------------------------------ End Business Methods -------------------------------- //
+
+    @PrePersist
+    public void applyDefaults() {
+        if (accountStatus == null) {
+            accountStatus = AccountStatus.DISABLED;
+        }
+    }
+
 
     @Override
     public String getName() {
